further reading comments

--- a/Digit_MLP.ipynb
+++ b/Digit_MLP.ipynb
@@ -858,7 +858,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predicting Output on Test Set"
+    "# Predicting Output on Test Set\n",
+    "Predicting Output on testset for submitting in kaggle"
    ]
   },
   {
