--- a/Digit_CNN.ipynb
+++ b/Digit_CNN.ipynb
@@ -15,11 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "#libraries\n",
     "import numpy as np\n",
@@ -267,7 +273,7 @@
     }
    ],
    "source": [
-    "train = pd.read_csv('/home/oliver/Documents/Kaggle/Digit/train.csv')\n",
+    "train = pd.read_csv('/home/oliver/Documents/DL_Kaggle/Digit/train.csv')\n",
     "print (train.shape)\n",
     "train.head()"
    ]
@@ -485,7 +491,7 @@
     }
    ],
    "source": [
-    "test = pd.read_csv('/home/oliver/Documents/Kaggle/Digit/test.csv')\n",
+    "test = pd.read_csv('/home/oliver/Documents/DL_Kaggle/Digit/test.csv')\n",
     "print(test.shape)\n",
     "test.head()"
    ]
@@ -523,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -543,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -568,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -589,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -698,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -707,41 +713,44 @@
      "text": [
       "Train on 37800 samples, validate on 4200 samples\n",
       "Epoch 1/10\n",
-      "37800/37800 [==============================] - 42s 1ms/step - loss: 0.3224 - acc: 0.9091 - val_loss: 0.1052 - val_acc: 0.9712\n",
+      "37800/37800 [==============================] - 43s 1ms/step - loss: 0.3030 - acc: 0.9108 - val_loss: 0.1070 - val_acc: 0.9719\n",
       "Epoch 2/10\n",
-      "37800/37800 [==============================] - 47s 1ms/step - loss: 0.0902 - acc: 0.9739 - val_loss: 0.0693 - val_acc: 0.9817\n",
+      "37800/37800 [==============================] - 54s 1ms/step - loss: 0.0912 - acc: 0.9728 - val_loss: 0.0684 - val_acc: 0.9836\n",
       "Epoch 3/10\n",
-      "37800/37800 [==============================] - 47s 1ms/step - loss: 0.0624 - acc: 0.9805 - val_loss: 0.0601 - val_acc: 0.9829\n",
+      "37800/37800 [==============================] - 53s 1ms/step - loss: 0.0613 - acc: 0.9816 - val_loss: 0.0598 - val_acc: 0.9836\n",
       "Epoch 4/10\n",
-      "37800/37800 [==============================] - 47s 1ms/step - loss: 0.0466 - acc: 0.9860 - val_loss: 0.0571 - val_acc: 0.9829\n",
+      "37800/37800 [==============================] - 51s 1ms/step - loss: 0.0477 - acc: 0.9849 - val_loss: 0.0546 - val_acc: 0.9840\n",
       "Epoch 5/10\n",
-      "37800/37800 [==============================] - 47s 1ms/step - loss: 0.0378 - acc: 0.9883 - val_loss: 0.0548 - val_acc: 0.9848\n",
-      "Epoch 6/10\n",
-      "37800/37800 [==============================] - 47s 1ms/step - loss: 0.0318 - acc: 0.9898 - val_loss: 0.0481 - val_acc: 0.9869\n",
-      "Epoch 7/10\n",
-      "37800/37800 [==============================] - 47s 1ms/step - loss: 0.0275 - acc: 0.9907 - val_loss: 0.0468 - val_acc: 0.9879\n",
-      "Epoch 8/10\n",
-      "37800/37800 [==============================] - 47s 1ms/step - loss: 0.0232 - acc: 0.9928 - val_loss: 0.0482 - val_acc: 0.9867\n",
-      "Epoch 9/10\n",
-      "37800/37800 [==============================] - 47s 1ms/step - loss: 0.0203 - acc: 0.9932 - val_loss: 0.0460 - val_acc: 0.9860\n",
-      "Epoch 10/10\n",
-      "37800/37800 [==============================] - 48s 1ms/step - loss: 0.0170 - acc: 0.9946 - val_loss: 0.0559 - val_acc: 0.9855\n"
+      "18000/37800 [=============>................] - ETA: 23s - loss: 0.0371 - acc: 0.9891"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7f7f183a0550>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "model = baseline_model()\n",
     "model.fit(x_train, y_train, validation_data=(x_val, y_val), epochs=10, batch_size=200, verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "scores = model.evaluate(x_val, y_val, verbose=0)\n",
+    "print (scores)\n",
+    "print ('Score: {}'.format(scores[0]))\n",
+    "print ('Accuracy: {}'.format(scores[1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Confusion Matrix for Validation dataset"
    ]
   },
   {
