--- a/Digit_MLP.ipynb
+++ b/Digit_MLP.ipynb
@@ -859,7 +859,7 @@
    "metadata": {},
    "source": [
     "# Predicting Output on Test Set\n",
-    "Predicting Output on testset for submitting in kaggle"
+    "Predicting Output on testset for submitting in kaggle. Got 97% accuracy on test dataset when submitted on Kaggle."
    ]
   },
   {
