--- a/Digit_CNN.ipynb
+++ b/Digit_CNN.ipynb
@@ -15,17 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#libraries\n",
     "import numpy as np\n",
@@ -44,7 +36,7 @@
     "\n",
     "# for Convolutional Neural Network (CNN) model\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Dropout, Flatten\n",
+    "from keras.layers import Dropout, Flatten, BatchNormalization\n",
     "from keras.layers.convolutional import Conv2D\n",
     "from keras.layers.convolutional import MaxPooling2D\n",
     "from keras.layers import Dense\n",
@@ -894,6 +886,174 @@
     "prediction[\"Label\"] = model.predict_classes(x_test, verbose=0)\n",
     "print(prediction[:2])\n",
     "prediction.to_csv(\"prediction_cnn.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model2\n",
+    "Adding 3 convulational and 2 fully connected layer in CNN model and also increasing the number of epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def baseline_model2():\n",
+    "    # create model\n",
+    "    model2 = Sequential()\n",
+    "    model2.add(Conv2D(filters=32, kernel_size=(5, 5), input_shape=(1, 28, 28), activation='relu'))\n",
+    "    model2.add(BatchNormalization())\n",
+    "    model2.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model2.add(Dropout(0.2))\n",
+    "\n",
+    "    model2.add(Conv2D(filters=64, kernel_size=(3, 3), activation='relu'))\n",
+    "    model2.add(BatchNormalization())\n",
+    "    model2.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model2.add(Dropout(0.2))\n",
+    "    \n",
+    "    model2.add(Conv2D(filters=128, kernel_size=(3, 3), activation='relu'))\n",
+    "    model2.add(BatchNormalization())\n",
+    "    model2.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model2.add(Dropout(0.2))\n",
+    "    \n",
+    "    model2.add(Flatten())\n",
+    "    \n",
+    "    model2.add(Dense(512, activation='relu'))\n",
+    "    model2.add(BatchNormalization())\n",
+    "    model2.add(Dropout(0.25))\n",
+    "    \n",
+    "    model2.add(Dense(1024, activation='relu'))\n",
+    "    model2.add(BatchNormalization())\n",
+    "    model2.add(Dropout(0.5))\n",
+    "    \n",
+    "    model2.add(Dense(num_classes, activation='softmax'))\n",
+    "    \n",
+    "    # Compile model\n",
+    "    model2.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "    \n",
+    "    return model2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 37800 samples, validate on 4200 samples\n",
+      "Epoch 1/30\n",
+      "37800/37800 [==============================] - 102s 3ms/step - loss: 0.5825 - acc: 0.8314 - val_loss: 0.1097 - val_acc: 0.9683\n",
+      "Epoch 2/30\n",
+      "37800/37800 [==============================] - 101s 3ms/step - loss: 0.1546 - acc: 0.9533 - val_loss: 0.0894 - val_acc: 0.9781\n",
+      "Epoch 3/30\n",
+      "37800/37800 [==============================] - 101s 3ms/step - loss: 0.1096 - acc: 0.9659 - val_loss: 0.0625 - val_acc: 0.9848\n",
+      "Epoch 4/30\n",
+      "37800/37800 [==============================] - 101s 3ms/step - loss: 0.0827 - acc: 0.9748 - val_loss: 0.0612 - val_acc: 0.9850\n",
+      "Epoch 5/30\n",
+      "37800/37800 [==============================] - 101s 3ms/step - loss: 0.0714 - acc: 0.9775 - val_loss: 0.0592 - val_acc: 0.9883\n",
+      "Epoch 6/30\n",
+      "37800/37800 [==============================] - 105s 3ms/step - loss: 0.0630 - acc: 0.9804 - val_loss: 0.0573 - val_acc: 0.9852\n",
+      "Epoch 7/30\n",
+      "37800/37800 [==============================] - 114s 3ms/step - loss: 0.0548 - acc: 0.9834 - val_loss: 0.0452 - val_acc: 0.9869\n",
+      "Epoch 8/30\n",
+      "37800/37800 [==============================] - 106s 3ms/step - loss: 0.0478 - acc: 0.9851 - val_loss: 0.0488 - val_acc: 0.9888\n",
+      "Epoch 9/30\n",
+      "37800/37800 [==============================] - 105s 3ms/step - loss: 0.0457 - acc: 0.9857 - val_loss: 0.0555 - val_acc: 0.9886\n",
+      "Epoch 10/30\n",
+      "37800/37800 [==============================] - 102s 3ms/step - loss: 0.0419 - acc: 0.9868 - val_loss: 0.0418 - val_acc: 0.9886\n",
+      "Epoch 11/30\n",
+      "37800/37800 [==============================] - 103s 3ms/step - loss: 0.0403 - acc: 0.9875 - val_loss: 0.0508 - val_acc: 0.9871\n",
+      "Epoch 12/30\n",
+      "37800/37800 [==============================] - 101s 3ms/step - loss: 0.0397 - acc: 0.9876 - val_loss: 0.0509 - val_acc: 0.9893\n",
+      "Epoch 13/30\n",
+      "37800/37800 [==============================] - 101s 3ms/step - loss: 0.0360 - acc: 0.9884 - val_loss: 0.0476 - val_acc: 0.9883\n",
+      "Epoch 14/30\n",
+      "37800/37800 [==============================] - 100s 3ms/step - loss: 0.0322 - acc: 0.9897 - val_loss: 0.0428 - val_acc: 0.9900\n",
+      "Epoch 15/30\n",
+      "37800/37800 [==============================] - 101s 3ms/step - loss: 0.0312 - acc: 0.9899 - val_loss: 0.0498 - val_acc: 0.9900\n",
+      "Epoch 16/30\n",
+      "37800/37800 [==============================] - 101s 3ms/step - loss: 0.0339 - acc: 0.9893 - val_loss: 0.0448 - val_acc: 0.9886\n",
+      "Epoch 17/30\n",
+      "37800/37800 [==============================] - 100s 3ms/step - loss: 0.0289 - acc: 0.9909 - val_loss: 0.0432 - val_acc: 0.9900\n",
+      "Epoch 18/30\n",
+      "37800/37800 [==============================] - 101s 3ms/step - loss: 0.0280 - acc: 0.9905 - val_loss: 0.0432 - val_acc: 0.9902\n",
+      "Epoch 19/30\n",
+      "37800/37800 [==============================] - 102s 3ms/step - loss: 0.0297 - acc: 0.9906 - val_loss: 0.0457 - val_acc: 0.9895\n",
+      "Epoch 20/30\n",
+      "37800/37800 [==============================] - 101s 3ms/step - loss: 0.0262 - acc: 0.9915 - val_loss: 0.0546 - val_acc: 0.9864\n",
+      "Epoch 21/30\n",
+      "37800/37800 [==============================] - 104s 3ms/step - loss: 0.0258 - acc: 0.9921 - val_loss: 0.0458 - val_acc: 0.9888\n",
+      "Epoch 22/30\n",
+      "37800/37800 [==============================] - 109s 3ms/step - loss: 0.0219 - acc: 0.9931 - val_loss: 0.0454 - val_acc: 0.9898\n",
+      "Epoch 23/30\n",
+      "37800/37800 [==============================] - 112s 3ms/step - loss: 0.0230 - acc: 0.9930 - val_loss: 0.0523 - val_acc: 0.9905\n",
+      "Epoch 24/30\n",
+      "37800/37800 [==============================] - 103s 3ms/step - loss: 0.0217 - acc: 0.9932 - val_loss: 0.0462 - val_acc: 0.9905\n",
+      "Epoch 25/30\n",
+      "37800/37800 [==============================] - 102s 3ms/step - loss: 0.0210 - acc: 0.9931 - val_loss: 0.0412 - val_acc: 0.9919\n",
+      "Epoch 26/30\n",
+      "37800/37800 [==============================] - 106s 3ms/step - loss: 0.0224 - acc: 0.9931 - val_loss: 0.0441 - val_acc: 0.9910\n",
+      "Epoch 27/30\n",
+      "37800/37800 [==============================] - 107s 3ms/step - loss: 0.0210 - acc: 0.9937 - val_loss: 0.0501 - val_acc: 0.9890\n",
+      "Epoch 28/30\n",
+      "37800/37800 [==============================] - 106s 3ms/step - loss: 0.0216 - acc: 0.9929 - val_loss: 0.0461 - val_acc: 0.9905\n",
+      "Epoch 29/30\n",
+      "37800/37800 [==============================] - 106s 3ms/step - loss: 0.0191 - acc: 0.9939 - val_loss: 0.0406 - val_acc: 0.9919\n",
+      "Epoch 30/30\n",
+      "37800/37800 [==============================] - 106s 3ms/step - loss: 0.0179 - acc: 0.9946 - val_loss: 0.0467 - val_acc: 0.9917\n"
+     ]
+    }
+   ],
+   "source": [
+    "# build the model\n",
+    "model2 = baseline_model2()\n",
+    "\n",
+    "# fit the model\n",
+    "history = model2.fit(x_train, y_train, validation_data=(x_val, y_val), epochs=50, batch_size=200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Submission to Kaggle\n",
+    "Generating csv file for submitting it to Kaggle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   ImageId  Label\n",
+      "0        1      2\n",
+      "1        2      0\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction = pd.DataFrame()\n",
+    "imageid = []\n",
+    "for i in range(len(x_test)):\n",
+    "    i = i + 1\n",
+    "    imageid.append(i)\n",
+    "prediction[\"ImageId\"] = imageid \n",
+    "prediction[\"Label\"] = model2.predict_classes(x_test, verbose=0)\n",
+    "print(prediction[:2])\n",
+    "prediction.to_csv(\"prediction_cnn2.csv\", index=False)"
    ]
   },
   {
