absolute path changed

--- a/Notebooks/Digit_CNN.ipynb
+++ b/Notebooks/Digit_CNN.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -61,12 +61,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading Dataset"
+    "# Loading Dataset\n",
+    "Make sure to change the path before running"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train_path = '/home/oliver/Documents/DL_Kaggle/MNIST_Digit/data_mnist/train.csv'\n",
+    "test_path = '/home/oliver/Documents/DL_Kaggle/MNIST_Digit/data_mnist/test.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,20 +284,20 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train = pd.read_csv('/home/oliver/Documents/DL_Kaggle/Digit/train.csv')\n",
+    "train = pd.read_csv(train_path)\n",
     "print (train.shape)\n",
     "train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -489,13 +502,13 @@
        "[5 rows x 784 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = pd.read_csv('/home/oliver/Documents/DL_Kaggle/Digit/test.csv')\n",
+    "test = pd.read_csv(test_path)\n",
     "print(test.shape)\n",
     "test.head()"
    ]
