--- a/Notebooks/Digit_MLP.ipynb
+++ b/Notebooks/Digit_MLP.ipynb
@@ -54,6 +54,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train_path = '/home/oliver/Documents/DL_Kaggle/MNIST_Digit/data_mnist/train.csv'\n",
+    "test_path = '/home/oliver/Documents/DL_Kaggle/MNIST_Digit/data_mnist/test.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -258,20 +270,20 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train = pd.read_csv('/home/oliver/Documents/DL_Kaggle/Digit/train.csv')\n",
+    "train = pd.read_csv(train_path)\n",
     "print (train.shape)\n",
     "train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -476,13 +488,13 @@
        "[5 rows x 784 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = pd.read_csv('/home/oliver/Documents/DL_Kaggle/Digit/test.csv')\n",
+    "test = pd.read_csv(test_path)\n",
     "print(test.shape)\n",
     "test.head()"
    ]
