--- a/Notebooks/Ensemble_CNN.ipynb
+++ b/Notebooks/Ensemble_CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
@@ -20,15 +20,15 @@
     "# Input data files are available in the \"../input/\" directory.\n",
     "# For example, running this (by clicking run or pressing Shift+Enter) will list the files in the input directory\n",
     "\n",
-    "import os\n",
-    "print(os.listdir(\"../input\"))\n",
+    "#import os\n",
+    "#print(os.listdir(\"../input\"))\n",
     "\n",
     "# Any results you write to the current directory are saved as output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -41,12 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "_uuid": "b18c794b69073d1c7a36de2a16bc18c4f79a70a7",
-    "collapsed": true
+    "_uuid": "b18c794b69073d1c7a36de2a16bc18c4f79a70a7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#libraries\n",
@@ -219,7 +226,7 @@
    },
    "outputs": [],
    "source": [
-    "nn = 10\n",
+    "nn = 5\n",
     "model = [0]*nn\n",
     "\n",
     "for j in range(nn):\n",
@@ -277,7 +284,7 @@
     "_uuid": "f75f0f1fc6d87ab510faf578c9a9286ac27e1fcf"
    },
    "source": [
-    "## Train 10 CNNS\n",
+    "## Train 5 CNNS\n",
     "Everytime before the training, it divides the dataset into training and validation"
    ]
   },
